--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -506,7 +506,7 @@ enable_audio_bell no
 
 #: Window layout {{{
 
-# remember_window_size  yes
+remember_window_size  no
 # initial_window_width  640
 # initial_window_height 400
 
@@ -564,7 +564,7 @@ enable_audio_bell no
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-# window_padding_width 0
+window_padding_width 10
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
