--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,7 +2,7 @@
 
 shadow = true;
 
-shadow-radius = 10;
+shadow-radius = 12;
 
 shadow-opacity = 0.60;
 
@@ -12,17 +12,29 @@ shadow-offset-y = -6;
 shadow-exclude = [
   "name = 'Notification'",
   "name = 'Android Emulator'",
-  "class_g = 'i3-frame'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "class_g = 'i3-frame'",
+#  "_GTK_FRAME_EXTENTS@:c"
 ];
 
+# Rounded corners
+corner-radius = 6;
+detect-rounded-corners = false;
+
+rounded-corners-exclude = [
+  "name = 'Notification'",
+  "name = 'Android Emulator'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "class_g = 'Cairo-clock'",
+  "class_g = 'i3-frame'",
+];
 
 # Fading
 
-fading = True
+fading = False
 
 fade-in-step = 0.3;
 fade-out-step = 0.3;
@@ -41,15 +53,18 @@ log-level = "warn";
 blur:
 {
   method = "gaussian";
-  size = 10;
-  deviation = 5.0;
+  size = 5;
+  deviation = 10.0;
+  strength = 10;
 };
 
+# General
+backend = "glx";
 vsync = true;
 
 wintypes:
 {
-  main = { fade = true; blur = true };
+  main = { fade = true; blur = false };
   tooltip = { fade = true; shadow = true; opacity = 0.95; focus = true; full-shadow = false; };
   dock = { shadow = false; opacity: 0.87; }
   dnd = { shadow = false; }
