--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,4 +1,4 @@
 [Settings]
-gtk-icon-theme-name = Arc-Dark
-gtk-theme-name = Arc-Dark
+gtk-icon-theme-name = Dracula
+gtk-theme-name = Dracula
 # gtk-font-name = DejaVu Sans 11
