Updates to Rice

--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -80,5 +80,6 @@
   "workbench.startupEditor": "none",
   "window.menuBarVisibility": "toggle",
   "workbench.statusBar.visible": false,
+  "workbench.activityBar.visible": false,
   // Auto
 }
