--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -20,7 +20,7 @@ shadow-exclude = [
 ];
 
 # Rounded corners
-corner-radius = 6;
+corner-radius = 2;
 detect-rounded-corners = false;
 
 rounded-corners-exclude = [
@@ -30,6 +30,7 @@ rounded-corners-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'i3-frame'",
+  "class_g = 'Polybar'"
 ];
 
 # Fading
