--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -1,7 +1,7 @@
 {
   "telemetry.telemetryLevel": "off",
   // Theme
-  "workbench.colorTheme": "Dracula",
+  "workbench.colorTheme": "Owlet (Default)",
   "workbench.productIconTheme": "icons-carbon",
   "git.autofetch": true,
   "rust-analyzer.inlayHints.enable": false,
@@ -73,13 +73,11 @@
   "vim.statusBarColors.surroundinputmode": "#007ACC",
   // Editor settings
   "editor.renderWhitespace": "none",
-  // Minimal UI
-  "window.zoomLevel": 0.9,
   "editor.minimap.enabled": false,
   "redhat.telemetry.enabled": false,
   "workbench.startupEditor": "none",
   "window.menuBarVisibility": "toggle",
-  "workbench.statusBar.visible": false,
-  "workbench.activityBar.visible": false,
+  "editor.lineNumbers": "relative",
+  "window.zoomLevel": 1,
   // Auto
 }
