--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -1,12 +1,13 @@
 {
+  // No telemetry :)
   "telemetry.telemetryLevel": "off",
+  "redhat.telemetry.enabled": false,
   // Theme
-  "workbench.colorTheme": "Owlet (Default)",
+  "workbench.colorTheme": "Gruvbox Material Dark",
   "workbench.productIconTheme": "icons-carbon",
   "git.autofetch": true,
   "rust-analyzer.inlayHints.enable": false,
   "git.enableSmartCommit": true,
-  "editor.fontSize": 13,
   "editor.bracketPairColorization.enabled": true,
   "[dart]": {
     "editor.formatOnSave": true,
@@ -19,14 +20,13 @@
     "editor.wordBasedSuggestions": false,
   },
   "debug.console.fontSize": 12,
-  "terminal.integrated.fontSize": 13,
+  "terminal.integrated.fontSize": 12,
   "git.confirmSync": false,
   "explorer.confirmDelete": false,
   // Vim
   "keyboard.dispatch": "keyCode", // Fixes keymaps
   "vim.easymotion": true,
   "vim.incsearch": true,
-  "vim.useSystemClipboard": true,
   "vim.hlsearch": true,
   "vim.insertModeKeyBindings": [
     {
@@ -74,10 +74,12 @@
   // Editor settings
   "editor.renderWhitespace": "none",
   "editor.minimap.enabled": false,
-  "redhat.telemetry.enabled": false,
   "workbench.startupEditor": "none",
   "window.menuBarVisibility": "toggle",
   "editor.lineNumbers": "relative",
+  "editor.fontFamily": "'FiraCode Nerd Font', serif",
+  "editor.fontSize": 12,
+  "workbench.activityBar.visible": false,
   "window.zoomLevel": 1,
   // Auto
 }
