--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -2,6 +2,8 @@ env:
   WINIT_X11_SCALE_FACTOR: "1.0"
   
 window:
+  opacity: 0.85
+
   padding:
     x: 8 
     y: 8 
@@ -25,7 +27,6 @@ font:
     style: Bold 
   size: 11.0
 
-background_opacity: 0.85
 
 key_bindings:
   
