--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -5,15 +5,8 @@ window:
   opacity: 0.85
 
   padding:
-    x: 8 
-    y: 8 
-
-  title: Alacritty
-  dynamic_title: true
-   
-  class:
-    instance: Alacritty
-    general: Alacritty
+    x: 12 
+    y: 16
 
 scrolling:
   history: 5000
@@ -27,6 +20,11 @@ font:
     style: Bold 
   size: 11.0
 
+cursor:
+  style:
+    shape: Beam
+
+  thickness: 0.16
 
 key_bindings:
   
@@ -1366,4 +1364,4 @@ schemes:
       white:   '0xffffff'
   
 # Set theme here
-colors: *one_dark
+colors: *dracula
