Blueish rice with leftwm

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -891,6 +891,29 @@ schemes:
       cyan:    '0x56b6c2'
       white:   '0xffffff'
 
+  one_dark_edit: &one_dark_edit
+    primary:
+      background: '0x21222C'
+      foreground: '0xF8F8F2'
+    normal:
+      black:   '0x15121C'
+      red:     '0xf07178'
+      green:   '0xc3e88d'
+      yellow:  '0xffcb6b'
+      blue:    '0x82aaff'
+      magenta: '0xffa8c5'
+      cyan:    '0x89ddff'
+      white:   '0xffffff'
+    bright:
+      black:   '0x5c6370'
+      red:     '0xe06c75'
+      green:   '0x98c379'
+      yellow:  '0xd19a66'
+      blue:    '0x61afef'
+      magenta: '0xc678dd'
+      cyan:    '0x56b6c2'
+      white:   '0xffffff'
+
   palenight: &palenight
     primary:
       background: '0x292d3e'
@@ -1367,4 +1390,4 @@ schemes:
       white:   '0xffffff'
   
 # Set theme here
-colors: *one_dark
+colors: *one_dark_edit
