--- a/.config/leftwm/themes/basic_polybar/polybar/modules.ini
+++ b/.config/leftwm/themes/basic_polybar/polybar/modules.ini
@@ -4,6 +4,7 @@ interval = 0.2
 format-prefix = "龍  "
 format-prefix-foreground = ${theme.purple}
 format-padding = 2
+label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
@@ -12,7 +13,7 @@ format-prefix = "  "
 format-prefix-foreground = ${theme.green}
 format-padding = 2
 format-background = ${theme.background-alt}
-label = %gb_used%
+label = %percentage_used:2%%
 
 [module/gpu]
 type = custom/script
@@ -64,7 +65,7 @@ format-muted = MUTED
 format-muted-foreground = ${theme.red}
 format-muted-padding = 2
 
-label-volume = %percentage%%     
+label-volume = %percentage:2%%     
 
 [module/networkspeed]
 type = internal/network
