--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -4,7 +4,7 @@ shadow = true;
 
 shadow-radius = 12;
 
-shadow-opacity = 0.60;
+shadow-opacity = 0.90;
 
 shadow-offset-x = -6;
 shadow-offset-y = -6;
@@ -20,7 +20,7 @@ shadow-exclude = [
 ];
 
 # Rounded corners
-corner-radius = 2;
+corner-radius = 0;
 detect-rounded-corners = false;
 
 rounded-corners-exclude = [
@@ -35,18 +35,18 @@ rounded-corners-exclude = [
 
 # Fading
 
-fading = False
+fading = True
 
-fade-in-step = 0.3;
-fade-out-step = 0.3;
+fade-in-step = 0.1;
+fade-out-step = 0.1;
 
 # Opacity
 
-active-opacity = 1.0; 
+active-opacity = 1.0;
 inactive-opacity = 1.0;
 
 frame-opacity = 0.9;
-inactive-dim = 0.0
+inactive-dim = 0.1
 
 log-level = "warn";
 
@@ -65,7 +65,7 @@ vsync = true;
 
 wintypes:
 {
-  main = { fade = true; blur = false };
+  main = { fade = true; blur = true };
   tooltip = { fade = true; shadow = true; opacity = 0.95; focus = true; full-shadow = false; };
   dock = { shadow = false; opacity: 0.87; }
   dnd = { shadow = false; }
