--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,3 +1,3 @@
 [Settings]
-gtk-icon-theme-name = Arc-Dark
-gtk-theme-name = Arc-Dark
+gtk-icon-theme-name = Material-Black-Blueberry
+gtk-theme-name = Material-Black-Blueberry
