--- a/.config/leftwm/config.toml
+++ b/.config/leftwm/config.toml
@@ -1,7 +1,7 @@
 modkey = "Mod4"
 mousekey = "Mod4"
 workspaces = []
-tags = ["web", "dev", "comm", "csume", "game", "write", "gfx", "bg"]
+tags = ["web", "dev", "comm", "write", "game", "csume", "gfx", "bg"]
 
 layouts = [
     "MainAndVertStack",
@@ -35,14 +35,15 @@ window_rules = [
     {window_class = "Signal", spawn_on_tag = 3},
     {window_class = "discord", spawn_on_tag = 3},
 
-    {window_class = "mpv", spawn_on_tag = 4},
+    {window_class = "libreoffice-writer", spawn_on_tag = 4},
+    {window_class = "libreoffice-calc", spawn_on_tag = 4},
 
     {window_class = "Steam", spawn_on_tag = 5},
     {window_class = "Lutris", spawn_on_tag = 5},
     {window_class = "Minecraft Launcher", spawn_on_tag = 5},
     {window_class = "factorio", spawn_on_tag = 5},
 
-    {window_class = "libreoffice-writer", spawn_on_tag = 6},
+    {window_class = "mpv", spawn_on_tag = 6},
 
     {window_class = "Blender", spawn_on_tag = 7},
 
