Update polybar with mpd, ncmpccp updates & ytdl

--- a/.config/leftwm/themes/basic_polybar/polybar/config.ini
+++ b/.config/leftwm/themes/basic_polybar/polybar/config.ini
@@ -7,35 +7,12 @@ include-file = $SCRIPTPATH/polybar/theme.ini
 
 [bar/mainbar0]
 inherit = bar/barbase
-modules-left = workspace0
+modules-left = workspace0 title
 [module/workspace0]
 type = custom/script
 exec = leftwm-state -w 0 -t $SCRIPTPATH/template.liquid
 tail = true
-
-[bar/mainbar1]
-inherit = bar/barbase
-modules-left = workspace1
-[module/workspace1]
-type = custom/script
-exec = leftwm-state -w 1 -t $SCRIPTPATH/template.liquid
-tail = true
-
-[bar/mainbar2]
-inherit = bar/barbase
-modules-left = workspace2
-[module/workspace2]
-type = custom/script
-exec = leftwm-state -w 2 -t $SCRIPTPATH/template.liquid
-tail = true
-
-[bar/mainbar3]
-inherit = bar/barbase
-modules-left = workspace3
-[module/workspace3]
-type = custom/script
-exec = leftwm-state -w 3 -t $SCRIPTPATH/template.liquid
-tail = true
+format-font = 1
 
 [bar/barbase]
 width = ${env:width}
@@ -59,10 +36,10 @@ padding-left = 5
 padding-right = 5
 
 font-0 = Iosevka Nerd Font:size=11;2
+font-1 = Iosevka Nerd Font:size=10;2
 
-modules-left = 
-modules-center = datetime
-modules-right = networkspeed weather filesystem cpu memory pulseaudio
+modules-center =
+modules-right = mpd networkspeed weather cpu memory pulseaudio datetime
 
 tray-position = right
 tray-padding = 6
