--- a/.config/leftwm/themes/basic_polybar/polybar/modules.ini
+++ b/.config/leftwm/themes/basic_polybar/polybar/modules.ini
@@ -1,18 +1,28 @@
+[module/title]
+type = internal/xwindow
+
+format = <label>
+format-padding = 3
+format-font = 2
+
+label = %title%
+label-maxlen = 46
+
 [module/cpu]
 type = internal/cpu
 interval = 0.2
 format-prefix = "龍  "
-format-prefix-foreground = ${theme.purple}
+format-prefix-foreground = ${theme.green}
 format-padding = 2
+format-background = ${theme.background-alt}
 label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
 interval = 0.2
 format-prefix = "  "
-format-prefix-foreground = ${theme.green}
+format-prefix-foreground = ${theme.cyan}
 format-padding = 2
-format-background = ${theme.background-alt}
 label = %percentage_used:2%%
 
 [module/gpu]
@@ -42,9 +52,9 @@ exec = ~/scripts/performance.sh
 
 [module/datetime]
 type = custom/script
-;format-prefix = "  "
-;format-prefix-foreground = ${theme.green}
-format-background = ${theme.background-alt}
+format-prefix = "  "
+format-prefix-foreground = ${theme.purple}
+;format-background = ${theme.background-alt}
 format-padding = 2
 
 interval = 1
@@ -53,28 +63,31 @@ exec = ~/scripts/date_time.sh
 [module/pulseaudio]
 type = internal/pulseaudio
 
+
 format-volume-font = 1
 format-volume-prefix = "墳  "
 format-volume-prefix-foreground = ${theme.blue}
 format-volume = <label-volume>
 format-volume-padding = 2
+format-volume-background = ${theme.background-alt}
 
 format-muted-font = 1
 format-muted-prefix = "ﱝ  "
 format-muted = MUTED
 format-muted-foreground = ${theme.red}
 format-muted-padding = 2
+format-muted-background = ${theme.background-alt}
 
-label-volume = %percentage:2%%     
+label-volume = %percentage:2%%
 
 [module/networkspeed]
 type = internal/network
 
-interface = enp9s0
+interface = eth0
 interval = 0.5
 
 label-connected = %downspeed:4%
-format-connected-prefix = "  "   
+format-connected-prefix = "  "
 format-connected-prefix-foreground = ${theme.orange}
 format-connected = <label-connected>
 format-connected-padding = 2
@@ -89,20 +102,25 @@ format-disconnected-background = ${theme.background-alt}
 [module/weather]
 type = custom/script
 
-exec = ~/scripts/weather.sh 
+exec = ~/scripts/weather.sh
 interval = 300
 format-prefix = "   "
 format-padding = 2
 format-prefix-foreground = ${theme.yellow}
 label = %output%
 
+[module/mpd]
+type = internal/mpd
+host = 127.0.0.1
+port = 6600
 
-[module/uptime]
-type = custom/script
-exec = ~/scripts/uptime.sh 
-interval = 10 
+format-online = <label-time> <label-song>
+format-online-padding = 2
+format-online-prefix = "   "
+format-online-prefix-foreground = ${theme.red}
 
-[module/os]
-type = custom/script
-exec = ~/scripts/os.sh 
-interval = 600 
+format-offline = ""
+
+label-song = %artist% - %title%
+label-song-font = 2
+label-time-font = 2
