--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -382,7 +382,7 @@ visualizer_type = spectrum
 ##
 #media_library_primary_tag = artist
 #
-#media_library_albums_split_by_date = yes
+media_library_albums_split_by_date = no
 #
 #media_library_hide_album_dates = no
 #
