--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -374,13 +374,13 @@ visualizer_type = spectrum
 #
 ## Available values: classic, alternative.
 ##
-#user_interface = classic
+user_interface = alternative
 #
 #data_fetching_delay = yes
 #
 ## Available values: artist, album_artist, date, genre, composer, performer.
 ##
-#media_library_primary_tag = artist
+media_library_primary_tag = album_artist
 #
 media_library_albums_split_by_date = no
 #
