--- a/.config/leftwm/config.toml
+++ b/.config/leftwm/config.toml
@@ -337,7 +337,7 @@ key = "u"
 
 [[keybind]]
 command = "Execute"
-value = "brave"
+value = "firefox"
 modifier = ["modkey", "Shift"]
 key = "w"
 
@@ -388,13 +388,13 @@ key = "F1"
 [[keybind]]
 command = "Execute"
 value = "mpc volume -5"
-modifier = []
+modifier = ["modkey"]
 key = "F2"
 
 [[keybind]]
 command = "Execute"
 value = "mpc volume +5"
-modifier = []
+modifier = ["modkey"]
 key = "F3"
 
 [[keybind]]
