Update stuff & move stuff to XDG dirs

--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -1,6 +1,6 @@
 {
     // Interface
-    "workbench.colorTheme": "One Dark Pro Darker",
+    "workbench.colorTheme": "Ayu Dark Bordered",
     // Editor settings
     "editor.renderWhitespace": "none",
     "editor.minimap.enabled": false,
