--- a/.config/leftwm/themes/basic_polybar/polybar/modules.ini
+++ b/.config/leftwm/themes/basic_polybar/polybar/modules.ini
@@ -51,14 +51,14 @@ interval = 0.2
 exec = ~/scripts/performance.sh
 
 [module/datetime]
-type = custom/script
+type = internal/date
+
 format-prefix = "  "
 format-prefix-foreground = ${theme.purple}
-;format-background = ${theme.background-alt}
 format-padding = 2
 
+date = %d-%m-%Y %H:%M:%S
 interval = 1
-exec = ~/scripts/date_time.sh
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -102,7 +102,7 @@ format-disconnected-background = ${theme.background-alt}
 [module/weather]
 type = custom/script
 
-exec = ~/scripts/weather.sh
+exec = ~/.local/bin/weather-info.sh
 interval = 300
 format-prefix = "   "
 format-padding = 2
