--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -47,10 +47,10 @@ mpd_music_dir = ~/music
 ## the relevant section for mpd.conf:
 ##
 ## audio_output {
-##        type            "fifo"
-##        name            "Visualizer feed"
-##        path            "/tmp/mpd.fifo"
-##        format          "44100:16:2"
+##       type            "fifo"
+##       name            "Visualizer feed"
+##       path            "/tmp/mpd.fifo"
+##       format          "44100:16:2"
 ## }
 ##
 ## If the visualization on occasion diverges from the audio output, please set
@@ -69,7 +69,7 @@ mpd_music_dir = ~/music
 ## visualizer.
 ##
 #
-#visualizer_data_source = /tmp/mpd.fifo
+visualizer_data_source = /tmp/mpd.fifo
 #
 ##
 ## Note: Below parameter is needed for ncmpcpp to determine which output
@@ -77,12 +77,12 @@ mpd_music_dir = ~/music
 ## to synchronize with audio.
 ##
 #
-#visualizer_output_name = Visualizer feed
+visualizer_output_name = Visualizer feed
 #
 ##
 ## If you set format to 44100:16:2, make it 'yes'.
 ##
-#visualizer_in_stereo = yes
+visualizer_in_stereo = yes
 #
 ##
 ## Note: set below to >=10 only if you have synchronization issues with
@@ -104,13 +104,13 @@ visualizer_type = spectrum
 #
 #visualizer_autoscale = no
 #
-#visualizer_look = ●▮
+visualizer_look = ●▮
 #
 #visualizer_color = blue, cyan, green, yellow, magenta, red
 #
 ## Alternative subset of 256 colors for terminals that support it.
 ##
-#visualizer_color = 47, 83, 119, 155, 191, 227, 221, 215, 209, 203, 197, 161
+visualizer_color = 47, 83, 119, 155, 191, 227, 221, 215, 209, 203, 197, 161
 #
 ##
 ## Note: The next few visualization options apply to the spectrum visualizer.
