--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -3,7 +3,7 @@ env:
   TERM: xterm-256color
 
 window:
-  opacity: 0.85
+  opacity: 0.8
 
   padding:
     x: 12
@@ -1387,4 +1387,4 @@ schemes:
       white:   '0xffffff'
 
 # Set theme here
-colors: *one_dark_edit
+colors: *ayu_dark
