--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -12,3 +12,12 @@ audio_output {
         type            "pipewire"
         name            "PipeWire Sound Server"
 }
+
+# fifo output needed for visualization
+audio_output {
+    type                    "fifo"
+    name                    "my_fifo"
+    path                    "/tmp/mpd.fifo"
+    format                  "44100:16:2"
+}
+
