--- a/.config/leftwm/themes/left_theme/polybar/modules.ini
+++ b/.config/leftwm/themes/left_theme/polybar/modules.ini
@@ -102,7 +102,7 @@ format-disconnected-background = ${theme.background-alt}
 [module/weather]
 type = custom/script
 
-exec = ~/.local/bin/weather-info.sh
+exec = ~/.local/bin/getweatherinfo
 interval = 300
 format-prefix = "   "
 format-padding = 2
